...
  );
  const { incomingRide, setIncomingRide, acceptRide, rejectRide, startRide } =
    useSocket(userToken, isOnline, activeRide);

  const handleLogout = () => {
    if (isOnline) {
      Alert.alert('Action Required', 'Please go offline before logging out.');
      return;
    }
    logout();
  };

  const toggleOnlineStatus = async (value: boolean) => {
...
